chore: se quitan warnings de ide